--- a/src/Gradle/build.gradle
+++ b/src/Gradle/build.gradle
@@ -9,9 +9,16 @@ repositories {
 
 dependencies {
     implementation 'de.gurkenlabs:litiengine:0.5.2'
-}
 
 application {
     mainClass = 'peekaboo.Horror'
 }
+
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
+
 
